--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Sol-->
     <div class="sun"></div>
 
+    <!--Sistema solar com suas classes e planetas-->
     <div class="mercury-outline">
         <div class="mercury">
             <p>Mercurio</p>
