--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Sol-->
     <div class="sun"></div>
 
+    <!--Sistema Solar-->
     <div class="mercury-outline">
         <div class="mercury">
             <p>Mercurio</p>
