--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
     </div>
 
+    <!--Seção de descrição de cada planeta-->
     <section class="clearfix">
 
         <ul class="solarsystem">
