refactor: inclusão de comentários

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <li class="urano"><a href="#urano"><span>Urano</span></a></li>
           <li class="netuno"><a href="#netuno"><span>Netuno</span></a></li>
         </ul>
-        
+
+        <!--Texto com informação de cada planeta-->
         <ul id="descriptions">
             <li>
             <h2 id="sun">Sol</h2>
